[package]
name = "short_url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
diesel = { version = "1.4.6", features = ["postgres","r2d2"] }
r2d2 = "0.8.10"
serde = "1.0.197"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
